--- a/app/javascript/containers/home.html
+++ b/app/javascript/containers/home.html
@@ -1,67 +1,53 @@
-<div class="container text-content sign-in-up">
-  <div class="row">
-    <div class="col-md-4 col-md-offset-4">
-      <br>
-      <!-- Nav tabs -->
-      <div class="text-center">
-        <div class="btn-group">
-          <a href="#new" role="tab" data-toggle="tab" class="big btn btn-primary"><i class="fa fa-plus"></i> Create Account</a>
-          <a href="#user" role="tab" data-toggle="tab" class="big btn btn-danger"><i class="fa fa-user"></i> Login</a>
-        </div>
+<footer id="sticky-footer" className="bg-grey fixed-bottom">
+  <div className="container text-center">
+    <div className="row foot-row">
+      <div className="col foot-col btn" role="tab" data-toggle="tab">
+        <i className="fas fa-chart-bar"></i>
+        <p>Add Readings</p>
       </div>
-      <p class="click2select">Click to select</p>
-      <div class="tab-content">
-        <div class="tab-pane fade in active" id="new">
-          <br>
-          <fieldset>
-            <div class="form-group">
-              <div class="right-inner-addon">
-                <i class="fa fa-envelope"></i>
-                <input class="form-control input-lg" placeholder="e-Mail Address" type="text">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="right-inner-addon">
-                <i class="fa fa-key"></i>
-                <input class="form-control input-lg" placeholder="Password" type="password">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="right-inner-addon">
-                <i class="fa fa-key"></i>
-                <input class="form-control input-lg" placeholder="Confirm Password" id="" type="password">
-              </div>
-            </div>
-          </fieldset>
-          <hr>
-          <div class="tab-content">
-            <div class="tab-pane fade in active text-center" id="pp">
-              <button class="btn btn-primary btn-lg btn-block"><i class="fa fa-plus"></i> Create Account</button>
-            </div>
-          </div>
-        </div>
-        <div class="tab-pane fade" id="user">
-          <br>
-          <fieldset>
-            <div class="form-group">
-              <div class="right-inner-addon">
-                <i class="fa fa-envelope"></i>
-                <input class="form-control input-lg" placeholder="e-Mail Address" type="text">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="right-inner-addon">
-                <i class="fa fa-key"></i>
-                <input class="form-control input-lg" placeholder="Password" type="password">
-              </div>
-            </div>
-          </fieldset>
-          <br>
-          <div class=" text-center">
-            <button class="btn btn-primary btn-danger"><i class="fa fa-user"></i> LOGIN</button>
-          </div>
-        </div>
+      <div className="col foot-col btn" role="tab" data-toggle="tab">
+        <i className="fas fa-chart-line"></i>
+        <p>Track.it</p>
+      </div>
+      <div className="col foot-col btn" role="tab" data-toggle="tab">
+        <i className="fas fa-chart-pie"></i>
+        <p>Report</p>
+      </div>
+      <div className="col foot-col btn" role="tab" data-toggle="tab">
+        <i className="fas fa-ellipsis-h"></i>
+        <p>More</p>
       </div>
     </div>
   </div>
-</div>
+</footer>
+
+<footer id="sticky-footer" className="bg-grey fixed-bottom">
+  <div className="container text-center">
+    <ul className="row foot-row nav nav-pills">
+      <li className="col foot-col nav-item">
+        <a className="nav-link" data-toggle="pill" href="#readings">
+          <i className="fas fa-chart-bar"></i>
+          <p>Add Readings</p>
+        </a>
+      </li>
+      <li className="col foot-col nav-item">
+        <a className="nav-link" data-toggle="pill" href="#track">
+          <i className="fas fa-chart-line"></i>
+          <p>Track.it</p>
+        </a>
+      </li>
+      <li className="col foot-col nav-item">
+        <a className="nav-link" data-toggle="pill" href="#report">
+          <i className="fas fa-chart-pie"></i>
+          <p>Report</p>
+        </a>
+      </li>
+      <li className="col foot-col nav-item">
+        <a className="nav-link" data-toggle="pill" href="#more">
+          <i className="fas fa-ellipsis-h"></i>
+          <p>More</p>
+        </a>
+      </li>
+    </ul>
+  </div>
+</footer> 
